plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pms
spec:
  selector:
    app: plex
  ports:
  - port: 32400
    name: web
