plex/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pms
  labels:
    name: pms
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: plex.sp4rck.ovh
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: plex-pms
            port: 
              name: web
